Converting a few more functions.

--- a/examples/math.html
+++ b/examples/math.html
@@ -1,17 +1,17 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Eweda and Math Tests</title>
+  <title>Ramda and Math Tests</title>
 </head>
 <body>
-  <h1>Eweda and Math Tests</h1>
+  <h1>Ramda and Math Tests</h1>
   <p>Nothing to see here, folks.  Please move on (or open the console.</p>
-  <script src="../eweda.perf.js"></script>
-  <script>eweda.installTo(this);</script>
+  <script src="../ramda.js"></script>
+  <script>ramda.installTo(this);</script>
   <script src="math.js"></script>
   <script type="text/javascript">
-      if (eweda && primes && allPrimeFactors && nthPrime) {
-          console.log("Eweda & math libraries loaded.");
+      if (ramda && primes && allPrimeFactors && nthPrime) {
+          console.log("Ramda & math libraries loaded.");
       } else {
           console.log("Problems loading libraries");
       }
