Adding tests for substring etc.

--- a/test/index.html
+++ b/test/index.html
@@ -42,6 +42,7 @@
   <script src="test.functionBasics.js"></script>
   <script src="test.expose.js"></script>
   <script src="test.list.js"></script>
+  <script src="test.stringBasics.js"></script>
   <script>
     mocha.checkLeaks();
     mocha.globals(['jQuery']);
