Adding using and select.  Not sure if using is appropriate.

--- a/test/index.html
+++ b/test/index.html
@@ -43,6 +43,7 @@
   <script src="test.expose.js"></script>
   <script src="test.list.js"></script>
   <script src="test.stringBasics.js"></script>
+  <script src="test.sql.js"></script>
   <script>
     mocha.checkLeaks();
     mocha.globals(['jQuery']);
