Renaming misidentified `identity` as `always`.

--- a/test/index.html
+++ b/test/index.html
@@ -36,7 +36,7 @@
   <script src="test.tapeq.js"></script>
   <script src="test.maybe.js"></script>
   <script src="test.compose.js"></script>
-  <script src="test.identity.js"></script>
+  <script src="test.always.js"></script>
   <script src="test.wrap.js"></script>
   <script src="test.keysvals.js"></script>
   <script src="test.functionBasics.js"></script>
