initial lazy branch commit: generators

--- a/test/index.html
+++ b/test/index.html
@@ -44,6 +44,7 @@
   <script src="test.list.js"></script>
   <script src="test.stringBasics.js"></script>
   <script src="test.sql.js"></script>
+  <script src="test.lazy.js"></script>
   <script>
     mocha.checkLeaks();
     mocha.globals(['jQuery']);
