exposed  (aka ), and implemented  while i was at it

--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,7 @@
   <script>ramda.installTo(this);</script>
   <script>mocha.setup('bdd')</script>
   <script src="test.core.js"></script>
+  <script src="test.each.js"></script>
   <script src="test.fold.js"></script>
   <script src="test.unfold.js"></script>
   <script src="test.map.js"></script>
