--- a/test/index.html
+++ b/test/index.html
@@ -18,6 +18,7 @@
   <script>ramda.installTo(this);</script>
   <script>mocha.setup('bdd')</script>
   <script src="test.core.js"></script>
+  <script src="test.curry.js"></script>
   <script src="test.clone.js"></script>
   <script src="test.each.js"></script>
   <script src="test.fold.js"></script>
