Use an internal indexOf implementation

--- a/test/index.html
+++ b/test/index.html
@@ -47,6 +47,7 @@
   <script src="test.functionBasics.js"></script>
   <script src="test.expose.js"></script>
   <script src="test.list.js"></script>
+  <script src="test.indexof.js"></script>
   <script src="test.stringBasics.js"></script>
   <script src="test.sql.js"></script>
   <script src="../ext/lazylist/test/test.lazy.js"></script>
