--- a/test/index.html
+++ b/test/index.html
@@ -49,6 +49,7 @@
   <script src="test.list.js"></script>
   <script src="test.indexof.js"></script>
   <script src="test.stringBasics.js"></script>
+  <script src="test.path.js"></script>
   <script src="test.sql.js"></script>
   <script src="../ext/lazylist/test/test.lazy.js"></script>
   <script>
