--- a/test/index.html
+++ b/test/index.html
@@ -56,6 +56,8 @@
   <script src="test.wrap.js"></script>
   <script src="test.keysvals.js"></script>
   <script src="test.functionBasics.js"></script>
+  <script src="test.functions.js"></script>
+  <script src="test.functionsIn.js"></script>
   <script src="test.expose.js"></script>
   <script src="test.list.js"></script>
   <script src="test.indexof.js"></script>
