--- a/test/index.html
+++ b/test/index.html
@@ -3,24 +3,11 @@
   <meta charset="utf-8">
   <title>Ramda Tests</title>
   <link rel="stylesheet" href="../lib/test/mocha.css" />
-  <script>
-    function require(path) {
-      switch (path.substr(path.lastIndexOf('/') + 1)) {
-        case 'assert':
-          return assert;
-        case '..':
-          return R;
-        case 'lazylist':
-          return R.lazylist;
-        default:
-          throw new Error('Unexpected require path "' + path + '"');
-      }
-    }
-  </script>
 </head>
 <body>
   <h1>Tests for ramda</h1>
   <div id="mocha"></div>
+  <script src="../lib/test/require-shim.js"></script>
   <script src="../lib/test/expect.js"></script>
   <script src="../lib/test/mocha.js"></script>
   <script src="../lib/test/assert-shim.js"></script>
