--- a/test/index.html
+++ b/test/index.html
@@ -2,15 +2,26 @@
 <head>
   <meta charset="utf-8">
   <title>Ramda Tests</title>
-  <link rel="stylesheet" href="../lib/test/mocha.css" />
+  <link rel="stylesheet" href="../node_modules/grunt-mocha/node_modules/mocha/mocha.css" />
 </head>
 <body>
-  <h1>Tests for ramda</h1>
   <div id="mocha"></div>
-  <script src="../lib/test/require-shim.js"></script>
-  <script src="../lib/test/expect.js"></script>
-  <script src="../lib/test/mocha.js"></script>
-  <script src="../lib/test/assert-shim.js"></script>
+  <script>
+    function require(path) {
+      switch (path.substr(path.lastIndexOf('/') + 1)) {
+        case 'assert':
+          return assert;
+        case '..':
+          return R;
+        case 'lazylist':
+          return R.lazylist;
+        default:
+          throw new Error('Unexpected require path "' + path + '"');
+      }
+    }
+  </script>
+  <script src="../node_modules/assert/assert.js"></script>
+  <script src="../node_modules/grunt-mocha/node_modules/mocha/mocha.js"></script>
   <script src="../ramda.js"></script>
   <script src="../ext/lazylist/lazylist.js"></script>
   <script>R.installTo(this);</script>
