sauce initial setup

--- a/test/index.html
+++ b/test/index.html
@@ -53,9 +53,10 @@
   <script src="test.sql.js"></script>
   <script src="test.is.js"></script>
   <script src="../ext/lazylist/test/test.lazy.js"></script>
+  <script src="../sauce/mocharun.js"></script>
   <script>
-    mocha.checkLeaks();
-    mocha.run();
+    //mocha.checkLeaks();
+    //mocha.run();
   </script>
 </body>
 </html>
