--- a/test/index.html
+++ b/test/index.html
@@ -13,6 +13,9 @@
   <script src="../lib/test/mocha.js"></script>
   <script src="../lib/test/assert-shim.js"></script>
   <script src="../ramda.js"></script>
+  <!--[if lt IE 9]>
+    <script src="../sauce/ie8-shim.js"></script>
+  <![endif]-->
   <script src="../ext/lazylist/lazylist.js"></script>
   <script>mocha.setup('bdd')</script>
   <script src="test.core.js"></script>
