--- a/test/index.html
+++ b/test/index.html
@@ -56,6 +56,7 @@
   <script src="test.sql.js"></script>
   <script src="test.is.js"></script>
   <script src="test.bind.js"></script>
+  <script src="test.lens.js"></script>
   <script src="../ext/lazylist/test/test.lazy.js"></script>
   <script src="../sauce/mocharun.js"></script>
 </body>
