--- a/test/index.html
+++ b/test/index.html
@@ -21,6 +21,7 @@
   <script src="test.core.js"></script>
   <script src="test.curry.js"></script>
   <script src="test.clone.js"></script>
+  <script src="test.cloneDeep.js"></script>
   <script src="test.each.js"></script>
   <script src="test.fold.js"></script>
   <script src="test.unfold.js"></script>
