--- a/test/index.html
+++ b/test/index.html
@@ -58,6 +58,7 @@
   <script src="test.is.js"></script>
   <script src="test.bind.js"></script>
   <script src="test.lens.js"></script>
+  <script src="test.commute.js"></script>
   <script src="../ext/lazylist/test/test.lazy.js"></script>
   <script src="../sauce/mocharun.js"></script>
 </body>
