--- a/test/index.html
+++ b/test/index.html
@@ -14,10 +14,10 @@
   <script src="../lib/test/assert-shim.js"></script>
   <script src="../dist/ramda.js"></script>
   <!--[if lt IE 9]>
-    <script src="../sauce/ie8-shim.js"></script>
+    <script src="../lib/sauce/ie8-shim.js"></script>
   <![endif]-->
   <script>mocha.setup('bdd')</script>
   <script src="bundle.js"></script>
-  <script src="../sauce/mocharun.js"></script>
+  <script src="../lib/sauce/mocharun.js"></script>
 </body>
 </html>
