--- a/lib/test/index.html
+++ b/lib/test/index.html
@@ -3,20 +3,19 @@
 <head>
   <meta charset="utf-8">
   <title>Ramda Tests</title>
-  <link rel="stylesheet" href="../lib/test/mocha.css" />
+  <link rel="stylesheet" href="mocha.css" />
 </head>
 <body>
   <h1>Tests for ramda</h1>
   <div id="mocha"></div>
-  <script src="../lib/test/require-shim.js"></script>
-  <script src="../lib/test/expect.js"></script>
-  <script src="../lib/test/mocha.js"></script>
-  <script src="../lib/test/assert-shim.js"></script>
+  <script src="lib/test/expect.js"></script>
+  <script src="mocha.js"></script>
+  <script src="assert-shim.js"></script>
   <!--[if lt IE 9]>
     <script src="../lib/sauce/ie8-shim.js"></script>
   <![endif]-->
   <script>mocha.setup('bdd')</script>
   <script src="bundle.js"></script>
-  <script src="../lib/sauce/mocharun.js"></script>
+  <script src="../sauce/mocharun.js"></script>
 </body>
 </html>
